--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Know Your Chords</string>
+    <string name="major">Major Chords</string>
+    <string name="minor">Minor Chords</string>
+    <string name="help">Help</string>
 </resources>
